ark-lib: Add test-util feature
Tooling to quickly generate VTXOs.

I am not using it yet but plan to adapt some of our test-code in a
different PR.

--- a/ark-lib/Cargo.toml
+++ b/ark-lib/Cargo.toml
@@ -9,6 +9,9 @@ repository = "https://github.com/ark-bitcoin/bark"
 [lib]
 name = "ark"
 
+[features]
+test-util = []
+
 [dependencies]
 
 # * EXPORTED DEPS
