--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -56,7 +56,7 @@ bip39.workspace = true
 bdk_wallet.workspace = true
 bdk_bitcoind_rpc.workspace = true
 
-tonic.workspace = true
+tonic = { workspace = true, features = ["tls-native-roots"] }
 tower.workspace = true
 http.workspace = true
 http-body.workspace = true
