--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -75,6 +75,7 @@ steps:
       TEST_DIRECTORY: ./test/esplora
       TEST_POSTGRES_HOST: localhost
       RUST_TEST_THREADS: 4
+      HODL_INVOICE_PLUGIN: /hold/target/debug/hold
     commands:
       - git log --oneline | head -n 1
       - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
@@ -103,6 +104,7 @@ steps:
       TEST_DIRECTORY: ./test/btc29
       TEST_POSTGRES_HOST: localhost
       RUST_TEST_THREADS: 4
+      HODL_INVOICE_PLUGIN: /hold/target/debug/hold
     commands:
       - git log --oneline | head -n 1
       - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
