aspd: Add lightning-state functionality to db

--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -38,6 +38,7 @@ log.workspace = true
 tokio-postgres.workspace = true
 bb8.workspace = true
 bb8-postgres.workspace = true
+postgres-types.workspace = true
 refinery = { version = "0.8.14", features = ["tokio-postgres"] }
 
 lazy_static.workspace = true
