--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ tokio-stream = { version = "0.1.14", features = [ "sync" ] }
 tokio-postgres = "0.7.12"
 bb8 = "0.9.0"
 bb8-postgres = "0.9.0"
+postgres-types = { version = "0.2.9", features = [ "derive", "with-chrono-0_4" ] }
 futures = {version = "0.3.30"}
 async-trait = "0.1.83"
 # bitcoin
