ci: Don't run codecov for the esplora version.

--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -101,7 +101,7 @@ steps:
       - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
       - ls -al $${ELECTRS_EXEC}
       - service postgresql start
-      - just test-integration-all-codecov
+      - just test-integration-all
       - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/"
       - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
 
