Code coverage in separate pipeline.

--- a/.woodpecker/helpers.yml
+++ b/.woodpecker/helpers.yml
@@ -1,4 +1,6 @@
 when:
+  - event: pull_request
+  - event: manual
   - event: tag
   - event: push
     branch: master
@@ -12,6 +14,20 @@ clone:
       lfs: false
 
 steps:
+  - name: tar-and-print
+    image: registry.2nd.dev/build:17
+    volumes:
+      - /data:/host/data
+    commands:
+      - tar -czf "/host/data/codecov/${CI_COMMIT_SHA}.tar.gz" "/host/data/codecov/${CI_COMMIT_SHA}/"
+      - mv "/host/data/codecov/${CI_COMMIT_SHA}.tar.gz" "/host/data/codecov/${CI_COMMIT_SHA}/"
+      - tar -czf "/host/data/test/${CI_COMMIT_SHA}.tar.gz" "/host/data/test/${CI_COMMIT_SHA}/"
+      - mv "/host/data/test/${CI_COMMIT_SHA}.tar.gz" "/host/data/test/${CI_COMMIT_SHA}/"
+      - echo "Code Coverage tar.gz -> https://ci.2nd.dev/codecov/${CI_COMMIT_SHA}/${CI_COMMIT_SHA}.tar.gz"
+      - echo "Code Coverage URL    -> https://ci.2nd.dev/codecov/${CI_COMMIT_SHA}/html/index.html"
+      - echo "Test data tar.gz     -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/${CI_COMMIT_SHA}.tar.gz"
+      - echo "Test data URL        -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
+
   - name: generate-rustdocs
     when:
       - event: push
@@ -33,4 +49,6 @@ steps:
       - bash ./contrib/check-versions.sh "${CI_COMMIT_TAG}"
 
 depends_on:
+  - main
   - tests
+  - tests-codecov
