Don't use "full" feature of tokio, but pick what we need

--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -37,6 +37,7 @@ fern.workspace = true
 chrono.workspace = true
 rand.workspace = true
 tokio.workspace = true
+tokio.features = [ "process" ]
 tokio-stream.workspace = true
 tonic.workspace = true
 futures.workspace = true
