--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ humantime = "2.1.0"
 # async + gRPC stack
 tonic-build = "0.12.2"
 prost = "0.13.2"
-tokio = { version = "1.35", features = [ "full" ] }
+tokio = { version = "1.35", features = [ "rt-multi-thread", "fs", "signal" ] }
 tokio-util = { version = "0.7.14" }
 tokio-stream = { version = "0.1.14", features = [ "sync" ] }
 tokio-postgres = "0.7.12"
