bitcoin-ext: Add EsploraClientExt with broadcast_package method

--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -21,3 +21,6 @@ serde_json.workspace = true
 
 # bdk
 bdk_wallet = { workspace = true, features = ["rusqlite"], optional = true }
+bdk_esplora.workspace = true
+reqwest = "0.11.27"
+async-trait = "0.1.88"
