--- a/aspd/config.default.toml
+++ b/aspd/config.default.toml
@@ -13,6 +13,13 @@ nb_round_nonces = 64
 round_tx_feerate = "2500sat/kwu"
 rpc_rich_errors = true
 txindex_check_interval = "30s"
+cln_array = []
+cln_reconnect_interval = "10s"
+invoice_check_interval = "3s"
+invoice_recheck_delay = "2s"
+invoice_check_base_delay = "10s"
+invoice_check_max_delay = "10m"
+invoice_poll_interval = "30s"
 legacy_wallet = false
 
 [vtxo_sweeper]
