--- a/.woodpecker/tests-codecov.yml
+++ b/.woodpecker/tests-codecov.yml
@@ -35,6 +35,7 @@ steps:
       - just build-codecov
 
   - name: test-integration-btc29.0
+    failure: ignore
     depends_on: build
     image: registry.2nd.dev/build:17
     volumes:
@@ -56,6 +57,7 @@ steps:
       - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
 
   - name: code-coverage
+    failure: ignore
     depends_on: test-integration-btc29.0
     image: registry.2nd.dev/build:17
     volumes:
