--- a/.woodpecker/helpers.yml
+++ b/.woodpecker/helpers.yml
@@ -40,6 +40,7 @@ steps:
       - just rustdocs
       - cp -r rustdocs /host/data/
       - bash contrib/generate-index.sh /host/data/rustdocs/doc
+      - echo "rustdocs -> https://rustdocs.2nd.dev/master/"
 
   - name: check-versions
     when:
