--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -81,5 +81,33 @@ steps:
           exit $code
         fi
 
+  - name: test-integration-btc29.0
+    depends_on: build
+    image: registry.2nd.dev/build:17
+    volumes:
+      - /data:/host/data
+    environment:
+      BITCOIND_EXEC: /bitcoin/29.0/bin/bitcoind
+      LIGHTNINGD_EXEC: /lightning/25.02/bin/lightningd
+      TEST_DIRECTORY: ./test/btc29
+      TEST_POSTGRES_HOST: localhost
+    commands:
+      - git log --oneline | head -n 1
+      - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
+      - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
+      - ls -al $${BITCOIND_EXEC}
+      - ls -al $${LIGHTNINGD_EXEC}
+      - service postgresql start
+      - just test-integration-all || echo $? > /tmp/test_exit_code
+      - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/"
+      - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
+      - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
+      - |
+        if [ -f /tmp/test_exit_code ]; then
+          code=$(cat /tmp/test_exit_code)
+          echo "Tests failed with exit code $code."
+          exit $code
+        fi
+
 depends_on:
   - main
