--- a/.woodpecker/tests-codecov.yml
+++ b/.woodpecker/tests-codecov.yml
@@ -58,6 +58,7 @@ steps:
       - ls -al $${LIGHTNINGD_EXEC}
       - service postgresql start
       - just test-integration-all-codecov || echo $? > /tmp/test_exit_code
+      - sleep 1s
       - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/"
       - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
       - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
