--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -72,6 +72,7 @@ steps:
       - ls -al $${ELECTRS_EXEC}
       - service postgresql start
       - just test-integration-all || echo $? > /tmp/test_exit_code
+      - sleep 1s
       - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/"
       - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
       - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
@@ -101,6 +102,7 @@ steps:
       - ls -al $${LIGHTNINGD_EXEC}
       - service postgresql start
       - just test-integration-all || echo $? > /tmp/test_exit_code
+      - sleep 1s
       - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/"
       - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
       - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
