--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -72,10 +72,9 @@ steps:
       - ls -al $${ELECTRS_EXEC}
       - service postgresql start
       - just test-integration-all || echo $? > /tmp/test_exit_code
-      - sleep 1s
-      - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/"
-      - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
-      - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
+      - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/esplora/"
+      - cp -r test/esplora/* "/host/data/test/${CI_COMMIT_SHA}/esplora/"
+      - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/esplora/"
       - |
         if [ -f /tmp/test_exit_code ]; then
           code=$(cat /tmp/test_exit_code)
@@ -102,10 +101,9 @@ steps:
       - ls -al $${LIGHTNINGD_EXEC}
       - service postgresql start
       - just test-integration-all || echo $? > /tmp/test_exit_code
-      - sleep 1s
-      - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/"
-      - cp -r test/* "/host/data/test/${CI_COMMIT_SHA}/"
-      - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
+      - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/btc29/"
+      - cp -r test/btc29/* "/host/data/test/${CI_COMMIT_SHA}/btc29/"
+      - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/btc29/"
       - |
         if [ -f /tmp/test_exit_code ]; then
           code=$(cat /tmp/test_exit_code)
