--- a/.woodpecker/tests-codecov.yml
+++ b/.woodpecker/tests-codecov.yml
@@ -15,6 +15,8 @@ clone:
 
 steps:
   - name: check-commits
+    when:
+      - evaluate: CI_CODECOV_PIPELINE == "true"
     image: registry.2nd.dev/build:17
     commands:
       - git log --oneline | head -n 1
@@ -22,6 +24,8 @@ steps:
       - git log --oneline | head -n 1
 
   - name: test-unit
+    when:
+      - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: check-commits
     image: registry.2nd.dev/build:17
     environment:
@@ -31,6 +35,8 @@ steps:
       - just test-unit-all-codecov
 
   - name: build
+    when:
+      - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: check-commits
     image: registry.2nd.dev/build:17
     environment:
@@ -41,7 +47,8 @@ steps:
       - just build-codecov
 
   - name: test-integration-btc29.0
-    failure: ignore
+    when:
+      - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: build
     image: registry.2nd.dev/build:17
     volumes:
@@ -71,7 +78,8 @@ steps:
         fi
 
   - name: code-coverage
-    failure: ignore
+    when:
+      - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: test-integration-btc29.0
     image: registry.2nd.dev/build:17
     volumes:
