--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 [dependencies]
 # OWN
 ark-lib = { path = "../ark-lib" }
+bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
 
 # EXPORTED
 bitcoin.workspace = true
 serde.workspace = true
 humantime.workspace = true
+thiserror.workspace = true
